--- a/html/aula6.html
+++ b/html/aula6.html
@@ -11,5 +11,9 @@
             <div class="box">Caixa 3</div>
             <div class="box special" id="b">Caixa 4</div>
         </div>
+        <!--<p id="content">dfhsjfhkjshfkjhsdjkgjkdhfgjhdkshgjkfsd</p>
+        <p id="content2">Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla</p>-->
+        <p><img alt="" src="/img/sonic.png">Sonic é um ouriço azul bastante veloz</p>
+        <h5>Sonic fã site</h5>
     </body>
 </html>
