--- a/Aulas/html/layout.html
+++ b/Aulas/html/layout.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div class="item">This is a placeholder text to make the column larger. It will show you how
-                the flexbox model adjusts the page item layout based on the size of the content
+                the flexbox model adjusts the page item layout based on the size of the content.
             </div>
             <div class="item">2</div>
             <div class="item">3</div>
